@@ -9,10 +9,12 @@
   <body>
     <div id="contexthelp">
       <h1>OpenFlights: Forgot password?</h1>
+      
+      <p>One tip before you panic: make sure you have entered your password <b>using the same case</b> as you did when signing up: "Secret" is not the same as "secret".  If you signed up before January 15, 2009, your <b>username</b> ("Joe" vs "joe") also has to match.</p>
 
-      <p>If you have forgotten your password <i>and</i> you gave us your e-mail address when signing up, please send mail to <i>support at openflights dot org</i>, give your account name and request to have your password reset.  A new password will be mailed to the address you gave us within a few days.</p><br>
+      <p>If that doesn't help <i>and</i> you gave us your e-mail address when signing up, please send mail to <i>support at openflights dot org</i>, give your account name and request to have your password reset.  A new password will be mailed to the address you gave us within a few days.</p>
 
-      <p>If you didn't register an e-mail address, then sorry, we don't know that you're you, so there's really nothing we can do.</p><br>
+      <p>If you didn't register an e-mail address, then sorry, we don't know that you're you, so there's really nothing we can do.</p>
 
       <INPUT type="button" value="Return" onClick="javascript:window.close()">
       </FORM>
